--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,7 +15,7 @@
   <main class="context">
     <section class="qrCode">
       <img class="qr" src="images/image-qr-code.png" alt="">
-      <h1><br>Improve your front-end<br>skills by building projects</h1><br>
+      <h1>Improve your front-end<br>skills by building projects</h1>
       <p>Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
     </section>
   </main>
