--- a/product-preview-card-component-main/src/index.html
+++ b/product-preview-card-component-main/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="stylesheet" href="style.min.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -18,7 +18,7 @@
 <body>
   <div class="container">
     <div class="imagem">
-      <img src="../images/image-product-desktop.jpg" alt="">
+      <img src="images/image-product-desktop.jpg" alt="">
     </div>
     <div class="conteudo">
       <h3>PERFUME</h3>
